# SOLARC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Sample Win32.txt  clean.ps1  clean.sh  configure-and-build.ps1  configure-and-build.sh
Code/: PCH.h  dump.txt
Code/CommonFlags/: CMakeLists.txt
Code/ENerf/: CMakeLists.txt
Code/ENerf/src/: main.cpp
Code/ENerfCore/: CMakeLists.txt
Code/ENerfCore/cmake/: SRC_FILES.cmake
Code/ENerfCore/include/: ENerfApp.h  Window.h  WindowContext.h  WindowsWindow.h
Code/ENerfCore/include/Event/: Event.h  EventComponent.h  EventQueue.h  EventThread.h
Code/ENerfCore/include/Event/EventCell/: EventCell.h  ObserverEventCell.h
Code/ENerfCore/include/Preprocessor/: API.h
Code/ENerfCore/include/Utility/: CompileTimeUtil.h  UUID.h
Code/ENerfCore/src/: ENerfApp.cpp  Window.cpp  WindowsWindow.cpp
Code/ENerfCore/src/Event/: EventThread.cpp
Code/Solarc/: CMakeLists.txt
Code/Solarc/cmake/: DEFS.cmake  SRC_FILES.cmake
Code/Solarc/src/: main.cpp
Code/SolarcCore/: CMakeLists.txt
Code/SolarcCore/cmake/: DEFS.cmake  SRC_FILES.cmake
Code/SolarcCore/include/: SolarcApp.h  Window.h  WindowContext.h  WindowPlatform.h  WindowsWindow.h  WindowsWindowPlatform.h
Code/SolarcCore/include/Event/: ApplicationEvent.h  Event.h  EventBus.h  EventCommunication.h  EventComponent.h  EventListener.h  EventProducer.h  EventQueue.h  InputEvent.h  ObserverBus.h  WindowEvent.h
Code/SolarcCore/include/Event/EventCell/: EventCell.h
Code/SolarcCore/include/Event/EventCells/: ObserverEventCell.h
Code/SolarcCore/include/Input/: InputFrame.h  InputManager.h  InputState.h  KeyCode.h  KeyMapping.h  MouseButton.h
Code/SolarcCore/include/Input/Platform/Linux/: WaylandKeyMapping.h
Code/SolarcCore/include/Input/Platform/Windows/: WindowsKeyMapping.h
Code/SolarcCore/include/Logging/: Log.h  LogMacros.h
Code/SolarcCore/include/MT/: Job.h  JobHandle.h  JobSystem.h  ThreadChecker.h  ThreadPool.h  ThreadSafeQueue.h
Code/SolarcCore/include/Preprocessor/: API.h
Code/SolarcCore/include/Rendering/RHI/: RHI.h  RHIResult.h
Code/SolarcCore/include/Utility/: CompileTimeUtil.h  FileSystemUtil.h  UUID.h
Code/SolarcCore/include/Window/: Window.h  WindowContext.h  WindowContextPlatform.h  WindowContextPlatformFactory.h  WindowPlatform.h  WindowPlatformFactory.h  WindowsWindowContextPlatform.h  WindowsWindowPlatform.h
Code/SolarcCore/include/Window/Platform/Linux/: WaylandWindowContextPlatform.h  WaylandWindowContextPlatformFactory.h  WaylandWindowPlatform.h  WaylandWindowPlatformFactory.h
Code/SolarcCore/include/Window/Platform/Windows/: WindowsWindowContextPlatform.h  WindowsWindowContextPlatformFactory.h  WindowsWindowPlatform.h  WindowsWindowPlatformFactory.h
Code/SolarcCore/src/: SolarcApp.cpp  WindowPlatform.cpp  WindowsWindow.cpp  WindowsWindowPlatform.cpp
Code/SolarcCore/src/Event/: Event.cpp  EventCommunication.cpp  EventComponent.cpp  EventQueue.cpp
Code/SolarcCore/src/Event/EventCell/: EventCell.cpp
Code/SolarcCore/src/Input/: InputManager.cpp  KeyCode.cpp  KeyMapping.cpp
Code/SolarcCore/src/Logging/: Log.cpp
Code/SolarcCore/src/MT/: JobHandle.cpp  JobSystem.cpp  ThreadPool.cpp
Code/SolarcCore/src/Rendering/RHI/: RHI.cpp
Code/SolarcCore/src/Rendering/RHI/Platform/DX12/: DX12CommandContext.cpp  DX12CommandContext.h  DX12Device.cpp  DX12Device.h  DX12SwapChain.cpp  DX12SwapChain.h
Code/SolarcCore/src/Rendering/RHI/Platform/Vulkan/: VulkanCommandContext.cpp  VulkanCommandContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Code/SolarcCore/src/Utility/: CompileTimeUtil.cpp  FileSystemUtil.cpp
Code/SolarcCore/src/Window/: Window.cpp  WindowContext.cpp  WindowContextPlatform.cpp  WindowPlatform.cpp  WindowsWindowContextPlatform.cpp  WindowsWindowPlatform.cpp
Code/SolarcCore/src/Window/Platform/Linux/: WaylandWindowContextPlatform.cpp  WaylandWindowContextPlatformFactory.cpp  WaylandWindowPlatform.cpp  WaylandWindowPlatformFactory.cpp
Code/SolarcCore/src/Window/Platform/Windows/: WindowsWindowContextPlatform.cpp  WindowsWindowContextPlatformFactory.cpp  WindowsWindowPlatform.cpp  WindowsWindowPlatformFactory.cpp
Code/Test/: CMakeLists.txt
Code/Test/cmake/: DEFS.cmake  SRC_FILES.cmake
Code/Test/src/: ENerfAppTest.cpp  FreqUsedSymbolsOfTesting.h  SolarcAppTest.cpp  WindowTest.cpp  WindowsWindowTest.cpp  main.cpp
Code/Test/src/Event/: EventCellTest.cpp  EventCommunicationTest.cpp  EventComponentTest.cpp  EventFakes.cpp  EventFakes.h  EventMocks.cpp  EventMocks.h  EventSystemStressTest.cpp  EventTest.cpp  ObserverBusTest.cpp  ObserverEventCellTest.cpp
Code/Test/src/Input/: WindowInputIntegrationTest.cpp  WindowInputUnitTest.cpp
Code/Test/src/MT/: JobSystemTest.cpp  ThreadPoolTest.cpp
Code/Test/src/Rendering/: RHIFrameCycleIntegrationTest.cpp  RHIGPUSyncIntegrationTest.cpp  RHIIntegrationTest.cpp  RHIIntegrationTestFixture.h  RHIVsyncIntegrationTest.cpp  RHIWindowStateIntegrationTest.cpp
Code/Test/src/Window/: MockWindowPlatform.h  WindowIntegrationTest.cpp  WindowTest.cpp  WindowTest1.cpp
Data/: config.json  config.toml
Doc/: Build.md
Scripts/: build.bat  configure.bat
cmake/: DEFAULT_DEFS.cmake  GROUP_FILES.cmake  GoogleTestSetup.cmake  PCH.cmake  SETUP_CONFIGURATIONS.cmake  TEST_SETUP.cmake
cmake-toolchains/: LINUX_GNU_TOOLCHAIN.cmake  MSVC_TOOLCHAIN.cmake  WIN_GNU_TOOLCHAIN.cmake  windows-msvc.cmake
cmake-toolchains/cmake/: GCC_FLAGS.cmake
